force-app/main/default/objects/CX_For_Rent__c/CX_For_Rent__c.object-meta.xml
<CustomObject>
    <label>CX For Rent</label>
    <nameField>
        <label>CX For Rent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CX For Rent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>