force-app/main/default/objects/CX_For_Rent__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>CX For Rent</relationshipLabel>
    <relationshipName>CX_For_Rent</relationshipName>
    <type>Lookup</type>
</CustomField>