force-app/main/default/objects/CX_For_Rent__c/fields/ConsumptionAccount__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionAccount__c</fullName>
    <label>Conta de Consumo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConsumptionAccount</valueSetName>
    </valueSet>
</CustomField>