force-app/main/default/objects/CX_For_Rent__c/fields/IsAccountPaid__c.field-meta.xml
<CustomField>
    <fullName>IsAccountPaid__c</fullName>
    <label>A conta foi paga?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>