force-app/main/default/objects/CX_For_Rent__c/fields/IsMediationSuccessful__c.field-meta.xml
<CustomField>
    <fullName>IsMediationSuccessful__c</fullName>
    <label>Sucesso na mediação?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sem sucesso no contato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>