force-app/main/default/objects/CX_For_Rent__c/fields/IsRefundApproved__c.field-meta.xml
<CustomField>
    <fullName>IsRefundApproved__c</fullName>
    <label>Reembolso procede?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Em análise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>