force-app/main/default/objects/CX_For_Rent__c/fields/IsSharedAccount__c.field-meta.xml
<CustomField>
    <fullName>IsSharedAccount__c</fullName>
    <label>A conta é sobre um rateio?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>