force-app/main/default/objects/CX_For_Rent__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <label>Demandante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Requester</valueSetName>
    </valueSet>
</CustomField>