force-app/main/default/objects/CX_For_Rent__c/fields/UtilityProvider__c.field-meta.xml
<CustomField>
    <fullName>UtilityProvider__c</fullName>
    <label>Concessionária</label>
    <length>50</length>
    <type>Text</type>
</CustomField>